--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "greensoftware",
+  "name": "@cygni/greensoftware",
   "version": "1.0.0",
-  "description": "",
-  "main": "./dist/index.js",
+  "description": "This is part of the Cygni Digital Sustainabilty Package that was offered CTS 2023 and contains a chat-bot together with some data indexing",
   "scripts": {
-    "compile": "tsc",
-    "watch": "tsc --watch",
-    "start": "node ./dist/index.js",
-    "clean": "rm -rf node_modules/ dist/"
+    "data-indexer:scrape": "cd data-indexer && npm run scrape",
+    "data-indexer:embed": "cd data-indexer && npm run embed",
+    "data-indexer:test": "cd data-indexer && npm run start",
+    "chat-bot:compile": "cd chat-bot && npm run compile",
+    "chat-bot:start": "cd chat-bot && npm run start",
+    "do-clean": "rm -rf node_modules",
+    "clean": "npm run do-clean --workspaces"
   },
   "keywords": [],
   "author": "Tommy Wassgren",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node-fetch": "^2.6.7",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.2",
-    "openai": "^4.14.2"
-  }
+  "private": true,
+  "license": "UNLICENSED",
+  "workspaces": [
+    "chat-bot/**",
+    "data-indexer/**"
+  ]
 }
