--- a/chat-bot/package.json
+++ b/chat-bot/package.json
@@ -18,7 +18,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "chromadb": "^1.6.1",
     "dotenv": "^16.3.1",
+    "langchain": "^0.0.182-rc.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.14.2"
   }
