--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ langchain = "0.0.329"
 openai = "0.28.1"
 lxml = "4.9.3"
 tiktoken = "0.5.1"
-gradio = "4.0.2"
+python-dotenv = "1.0.0" 
 
 [requires]
 python_version = "3.11"
