--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ openai = "0.28.1"
 lxml = "4.9.3"
 tiktoken = "0.5.1"
 python-dotenv = "1.0.0" 
+slack-bolt = "1.18.0"
 slack_bolt = "1.18.0"
 
 [requires]
