--- a/Pipfile
+++ b/Pipfile
@@ -6,15 +6,17 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-beautifulsoup4 = "4.12.2"
+beautifulsoup4 = "4.12.3"
 requests = "2.31.0"
-chromadb = "0.4.15"
-langchain = "0.0.329"
-openai = "0.28.1"
-lxml = "4.9.3"
-tiktoken = "0.5.1"
-python-dotenv = "1.0.0" 
-slack-bolt = "1.18.0"
+chromadb = "0.4.22"
+langchain = "0.1.4"
+langchain-community = "0.0.16"
+openai = "1.10.0"
+langchain-openai = "0.0.5"
+lxml = "5.1.0"
+tiktoken = "0.5.2"
+python-dotenv = "1.0.1" 
+slack-bolt = "1.18.1"
 
 [requires]
 python_version = "3.11"
